# fuzzing options

option('fuzzing_engine',
       type : 'combo',
       choices : ['none', 'libfuzzer', 'oss-fuzz'],
       value : 'none',
       description : 'Select the fuzzing engine')

option('fuzzer_ldflags',
       type : 'string',
       description : 'Extra LDFLAGS used during linking of fuzzing binaries')

option('build_tests',
       type : 'boolean',
       value : true,
       description : 'Build unit tests')
